@@ -1,4 +1,5 @@
   [Michele Simionato]
+  * Internal: extended the command `oq mosaic sample_rups` to multiple models
   * After 3 years of deprecation, forbidden custom methods in GMPE classes
   * Changed the universal installer to recreate the venv
   * Reduced the number of tasks generated by `disagg_by_src` and added
